--- a/CovGI/www/templates/member_demand.html
+++ b/CovGI/www/templates/member_demand.html
@@ -1,20 +1,20 @@
-<ion-view title="Mes Offres">
+<ion-view title="Mes Demandes">
 
-    <ion-content ng-controller="memberOfferCtrl">
+    <ion-content ng-controller="memberDemandCtrl">
         <div class="buttons">
             <button class="button  button-icon icon ion-ios-minus-outline"
                     ng-click="showDelete = !showDelete"></button>
         </div>
         <ion-list show-delete="showDelete">
-            <ion-item ng-repeat="trajectUser in trajetsUser">
-                <ion-delete-button class="ion-trash-b" ng-click="deleteItem(trajectUser)">
+            <ion-item ng-repeat="trajectDemande in trajetsDemande">
+                <ion-delete-button class="ion-trash-b" ng-click="deleteItem(trajectDemande)">
                 </ion-delete-button>
                 <ion-option-button class="button-assertive"
-                                   ng-click="deleteItem(trajectUser)">
+                                   ng-click="deleteItem(trajectDemande)">
                     Supprimer
                 </ion-option-button>
                 <ion-option-button class="button-calm"
-                                   ng-click="edit(trajectUser)">
+                                   ng-click="edit(trajectDemande)">
                     Modifier
                 </ion-option-button>
 
@@ -26,8 +26,8 @@
                         <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 30px; margin-top: 7px; margin-left: 15px;">
                         <div class="col" style="margin-right: 150px">
 
-                            Technopolis <br>
-                           {{trajectUser.lieu}}
+                            Technopolis
+                            <p style="margin-left: 0px;">{{trajectDemande.lieu}}</p>
 
                         </div>
                     </div>
@@ -37,16 +37,12 @@
                 <div class="row">
                     <div class="col" style="margin-right: 150px">
                         <i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 70px;margin-left: 15px;"></i>
-                        Date et Heure : {{trajectUser.dateTrajet.slice(0,-8).split('T')}}
+                        Date et Heure : {{trajectDemande.dateTrajet.slice(0,-8).split('T')}}
                     </div>
 
                 </div>
 
-                <div class="row">
-                    <div class="col" style="margin-right: 100px">
-                        <i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i>
-                        Nombre de places disponibles : {{trajectUser.nombrePlace}}</div>
-                </div>
+
 
 
 
@@ -57,6 +53,6 @@
 
     </ion-content>
     <ion-footer-bar class="bar bar-footer" >
-        <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createOffer" style="width: 100%;"  >Créer une offre</a>
+        <a class="button  icon-right ion-chevron-right button-dark" href="#/menu/createDemand" style="width: 100%;"  >Créer une Demande</a>
     </ion-footer-bar>
 </ion-view>
