--- a/CovGI/www/templates/modal.html
+++ b/CovGI/www/templates/modal.html
@@ -6,47 +6,68 @@
         <div onload="initMap()" id="map"></div>
         <div id="current"></div>
 
+        <div class="row">
+            <div class="col" style="margin-right: 100px">
 
+                    <img  src="..\img\imane.PNG" class="icon icon-right" style="height: 5vw;
+     width: 5vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px gray;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: auto;">
+                    &nbsp;  {{UserOffer.login}}</div>
+
+
+        </div>
 
         <div class="row">
             <img src="..\img\from_to_icon.png" class="icon icon-right" style="height: 30px; margin-top: 7px; margin-left: 15px;">
                         <div class="col" style="margin-right: 150px">
 
-                Technopolis
-                           <p style="margin-left: 0px;">{{lieuOffre}}</p>
+                            &nbsp;   Technopolis
+                             <p style="margin-left: 8px;">{{lieuOffre}}</p>
 
                         </div>
         </div>
 
         <div class="row">
                <div class="col" style="margin-right: 150px">
-                <i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 70px;margin-left: 15px;"></i>
-                   Date et Heure : {{dateOffre.slice(0,-8).split('T')}}
+                <i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 70px;margin-left: 25px;"></i>
+                   &nbsp;  Date et Heure : {{dateOffre.slice(0,-8).split('T')}}
             </div>
 
         </div>
 
         <div class="row">
            <div class="col" style="margin-right: 100px">
-                <i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i>
-                Nombre de places disponibles : {{nbrPlaceOffre}}</div>
+                <i class="icon ion-ios-people" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 25px;"></i>
+               &nbsp;  Nombre de places disponibles : {{nbrPlaceOffre}}</div>
+        </div>
+
+        <div class="row">
+            <div class="col" style="margin-right: 100px">
+                <i class="icon  ion-android-car" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 25px;"></i>
+                &nbsp; Modèle de véhicule : {{UserOffer.vehicule}}</div>
+        </div>
+
+        <div class="row">
+            <div class="col" style="margin-right: 100px">
+                <i class="icon  ion-ios-barcode" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 25px;"></i>
+                &nbsp;  N° Immatriculation : {{UserOffer.matricule}}</div>
+        </div>
+
+        <div class="row">
+            <div class="col" style="margin-right: 100px">
+                <i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 25px;"></i>
+                &nbsp;   Cliquer sur la carte pour sélectionner votre point d'arrêt</div>
         </div>
 
 
-        <div class="row">
-            <div class="col"><ion-icon class="icon ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></ion-icon></div>
-            <div class="col" style="margin-right: 150px"><p>Vehicule : {{UserOffer.vehicule}}</p></div>
-        </div>
-        <div class="row">
-            <div class="col"><ion-icon class="icon ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></ion-icon></div>
-            <div class="col" style="margin-right: 150px"><p>N° Immatriculation : {{UserOffer.matricule}}</p></div>
-        </div>
-        <div class="row">
-            <div class="col"><i class="icon  ion-information-circled" style="font-size: 20px; height: 30px; margin-top: 103px; margin-left: 15px;"></i></div>
-            <div class="col" style="margin-right: 150px"><p> Pour s'inscrire cliquer sur la carte pour sélectionner votre point d'arrêt</p></div>
-        </div>
+
         <button class="button button-dark button-block" ng-click="inscriptionOffer()">S'inscrire pour cette offre</button>
-        <button class="button button-dark button-block" ng-click="modal.hide()">Retour</button>
+        <button class="button button-dark button-block" ng-click="modalOffre.hide()">Retour</button>
 
     </ion-content>
 </ion-modal-view>
