--- a/CovGI/www/css/style.css
+++ b/CovGI/www/css/style.css
@@ -1,6 +1,6 @@
 /* Empty. Add your own CSS if you like */
 .menu.menu-left {
-    background-image: url('https://www.cgi.fr/sites/default/files/images/bg-left-contact.jpg');
+    background-image: url('../img/cgi-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
