--- a/CovGI/www/templates/modal.html
+++ b/CovGI/www/templates/modal.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col" style="margin-right: 100px">
 
-                    <img  src="..\img\imane.PNG" class="icon icon-right" style="height: 5vw;
+                    <img  src="{{UserOffer.photo}}" class="icon icon-right" style="height: 5vw;
      width: 5vw;
     border: 2px solid #fff;
     border-radius: 50%;
