--- a/CovGI/www/templates/modalDemande.html
+++ b/CovGI/www/templates/modalDemande.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-dark">
         <h1 class="title">Demande</h1>
     </ion-header-bar>
-    <ion-content ng-controller="modalCrtl">
+    <ion-content >
         <div onload="initMapDemande()" id="map"></div>
 
 
