--- a/CovGI/www/templates/member_offer.html
+++ b/CovGI/www/templates/member_offer.html
@@ -36,11 +36,23 @@
 
                 <div class="row">
                     <div class="col" style="margin-right: 150px">
-                        <i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 70px;margin-left: 15px;"></i>
-                        Date et Heure : {{trajectUser.dateTrajet.slice(0,-8).split('T')}}
+
+
+                        <i class="icon ion-android-calendar" style="font-size: 20px;  height: 30px; margin-top: 65px;margin-left: 25px;"></i>
+
+
+                        &nbsp;  Date : {{trajectUser.dateTrajet.slice(0,-8).split('T')[0]}}
+
+                        <i class="icon ion-android-time" style="font-size: 20px;  height: 30px; margin-top: 65px;margin-left: 25px;"></i>
+
+
+                        &nbsp;  Heure : {{trajectUser.dateTrajet.slice(0,-8).split('T')[1]}}<br>
+
                     </div>
 
                 </div>
+
+
 
                 <div class="row">
                     <div class="col" style="margin-right: 100px">
