--- a/CovGI/www/templates/modal.html
+++ b/CovGI/www/templates/modal.html
@@ -9,15 +9,15 @@
         <div class="row">
             <div class="col" style="margin-right: 100px">
 
-                    <img  src="{{UserOffer.photo}}" class="icon icon-right" style="height: 5vw;
-     width: 5vw;
+                    <img  src="{{UserOffer.photo}}" class="icon icon-right" ng-click="showAvatar(UserOffer)" style="height: 10vw;
+     width: 10vw;
     border: 2px solid #fff;
     border-radius: 50%;
     box-shadow: 0 0 5px gray;
     display: inline-block;
     margin-left: 20px;
     margin-right: auto;">
-                    &nbsp;  {{UserOffer.login}}</div>
+                    &nbsp;  {{UserOffer.nom}} {{UserOffer.prenom}}</div>
 
 
         </div>
