--- a/CovGI/www/templates/sideMenu.html
+++ b/CovGI/www/templates/sideMenu.html
@@ -43,7 +43,7 @@
                         <ion-item ng-click="check_demands()" menu-close=""><i class="icon ion-android-car placeholder-icon"></i>Mes Demandes</ion-item>
                         <ion-item ng-click="createOffer()" menu-close=""  ><i class="icon ion-plus-circled placeholder-icon"></i>Créer une offre</ion-item>
                         <ion-item ng-click="createDemand()" menu-close="" ><i class="icon ion-plus-circled placeholder-icon"></i>Créer une demande</ion-item>
-                        <ion-item ng-click="check_registrations()" menu-close="" ><i class="icon ion-plus-circled placeholder-icon"></i>Mes inscriptions</ion-item>
+                        <ion-item ng-click="myInscriptions()" menu-close="" ><i class="icon ion-plus-circled placeholder-icon"></i>Mes inscriptions</ion-item>
 
                         <ion-item ng-click="logout()"><i class="icon ion-android-exit placeholder-icon"></i>Se déconnecter</ion-item>
                     </ion-list>
