--- a/CovGI/www/templates/tab-sendMail.html
+++ b/CovGI/www/templates/tab-sendMail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contact us" ng-controller="sendMailCrtl">
+<ion-view view-title="Nous contacter" ng-controller="sendMailCrtl">
   <ion-content>
     <div class="list">
   <label class="item item-input item-stacked-label">
