--- a/CovGI/www/templates/tabs.html
+++ b/CovGI/www/templates/tabs.html
@@ -6,17 +6,17 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-dark tabs-stable">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" icon-off="ion-android-home" icon-on="ion-android-home" href="#/tab/dash">
+  <ion-tab title="Se connecter" icon-off="icon ion-person " icon-on="icon ion-person " href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
-  <ion-tab title="About" icon-off="ion-ios-information" icon-on="ion-ios-information" href="#/tab/chats">
+  <ion-tab title="A propos de nous" icon-off="ion-ios-information" icon-on="ion-ios-information" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Contact us" icon-off="ion-ios-world" icon-on="ion-ios-world" href="#/tab/account">
+  <ion-tab title="Nous contacter" icon-off="ion-ios-world" icon-on="ion-ios-world" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
