--- a/CovGI/www/templates/tab-account.html
+++ b/CovGI/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Contact us">
+<ion-view view-title="Nous contacter">
   <ion-content>
 <p>
 	   Eodem tempore etiam Hymetii praeclarae indolis viri negotium est actitatum, cuius hunc novimus esse textum. cum Africam pro consule regeret Carthaginiensibus victus inopia iam lassatis, ex horreis Romano populo destinatis frumentum dedit, pauloque postea cum provenisset segetum copia, integre sine ulla restituit mora.<br/>
